# ros4hri_ws_exercises

./: README.md
target_person/: package.xml  setup.cfg  setup.py
target_person/launch/: launch_simulated_head.launch.py
target_person/target_person/: target_person.py
